--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,39 @@
-server.port=3321
+server.port=9002
 
 #kafka
 #============== kafka ===================
-# Ö¸¶¨kafka serverµÄµØÖ·£¬¼¯ÈºÅä¶à¸ö£¬ÖĞ¼ä£¬¶ººÅ¸ô¿ª
-spring.kafka.bootstrap-servers=106.54.123.133:9092
+# Ö¸ï¿½ï¿½kafka serverï¿½Äµï¿½Ö·ï¿½ï¿½ï¿½ï¿½Èºï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ğ¼ä£¬ï¿½ï¿½ï¿½Å¸ï¿½ï¿½ï¿½
+spring.kafka.bootstrap-servers=10.30.30.152:15229
 
 #=============== provider  =======================
-# Ğ´ÈëÊ§°ÜÊ±£¬ÖØÊÔ´ÎÊı¡£µ±leader½ÚµãÊ§Ğ§£¬Ò»¸örepli½Úµã»áÌæ´ú³ÉÎªleader½Úµã£¬´ËÊ±¿ÉÄÜ³öÏÖĞ´ÈëÊ§°Ü£¬
-# µ±retrisÎª0Ê±£¬produce²»»áÖØ¸´¡£retirsÖØ·¢£¬´ËÊ±repli½ÚµãÍêÈ«³ÉÎªleader½Úµã£¬²»»á²úÉúÏûÏ¢¶ªÊ§¡£
+# Ğ´ï¿½ï¿½Ê§ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½leaderï¿½Úµï¿½Ê§Ğ§ï¿½ï¿½Ò»ï¿½ï¿½repliï¿½Úµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªleaderï¿½Úµã£¬ï¿½ï¿½Ê±ï¿½ï¿½ï¿½Ü³ï¿½ï¿½ï¿½Ğ´ï¿½ï¿½Ê§ï¿½Ü£ï¿½
+# ï¿½ï¿½retrisÎª0Ê±ï¿½ï¿½produceï¿½ï¿½ï¿½ï¿½ï¿½Ø¸ï¿½ï¿½ï¿½retirsï¿½Ø·ï¿½ï¿½ï¿½ï¿½ï¿½Ê±repliï¿½Úµï¿½ï¿½ï¿½È«ï¿½ï¿½Îªleaderï¿½Úµã£¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢ï¿½ï¿½Ê§ï¿½ï¿½
 spring.kafka.producer.retries=0
-# Ã¿´ÎÅúÁ¿·¢ËÍÏûÏ¢µÄÊıÁ¿,produce»ıÀÛµ½Ò»¶¨Êı¾İ£¬Ò»´Î·¢ËÍ
+# Ã¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½,produceï¿½ï¿½ï¿½Ûµï¿½Ò»ï¿½ï¿½ï¿½ï¿½ï¿½İ£ï¿½Ò»ï¿½Î·ï¿½ï¿½ï¿½
 spring.kafka.producer.batch-size=16384
-# produce»ıÀÛÊı¾İÒ»´Î·¢ËÍ£¬»º´æ´óĞ¡´ïµ½buffer.memory¾Í·¢ËÍÊı¾İ
+# produceï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ò»ï¿½Î·ï¿½ï¿½Í£ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ğ¡ï¿½ïµ½buffer.memoryï¿½Í·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.kafka.producer.buffer-memory=33554432
 
-#procedureÒªÇóleaderÔÚ¿¼ÂÇÍê³ÉÇëÇóÖ®Ç°ÊÕµ½µÄÈ·ÈÏÊı£¬ÓÃÓÚ¿ØÖÆ·¢ËÍ¼ÇÂ¼ÔÚ·şÎñ¶ËµÄ³Ö¾Ã»¯£¬ÆäÖµ¿ÉÒÔÎªÈçÏÂ£º
-#acks = 0 Èç¹ûÉèÖÃÎªÁã£¬ÔòÉú²úÕß½«²»»áµÈ´ıÀ´×Ô·şÎñÆ÷µÄÈÎºÎÈ·ÈÏ£¬¸Ã¼ÇÂ¼½«Á¢¼´Ìí¼Óµ½Ì×½Ó×Ö»º³åÇø²¢ÊÓÎªÒÑ·¢ËÍ¡£ÔÚÕâÖÖÇé¿öÏÂ£¬ÎŞ·¨±£Ö¤·şÎñÆ÷ÒÑÊÕµ½¼ÇÂ¼£¬²¢ÇÒÖØÊÔÅäÖÃ½«²»»áÉúĞ§£¨ÒòÎª¿Í»§¶ËÍ¨³£²»»áÖªµÀÈÎºÎ¹ÊÕÏ£©£¬ÎªÃ¿Ìõ¼ÇÂ¼·µ»ØµÄÆ«ÒÆÁ¿Ê¼ÖÕÉèÖÃÎª-1¡£
-#acks = 1 ÕâÒâÎ¶×Åleader»á½«¼ÇÂ¼Ğ´ÈëÆä±¾µØÈÕÖ¾£¬µ«ÎŞĞèµÈ´ıËùÓĞ¸±±¾·şÎñÆ÷µÄÍêÈ«È·ÈÏ¼´¿É×ö³ö»ØÓ¦£¬ÔÚÕâÖÖÇé¿öÏÂ£¬Èç¹ûleaderÔÚÈ·ÈÏ¼ÇÂ¼ºóÁ¢¼´Ê§°Ü£¬µ«ÔÚ½«Êı¾İ¸´ÖÆµ½ËùÓĞµÄ¸±±¾·şÎñÆ÷Ö®Ç°£¬Ôò¼ÇÂ¼½«»á¶ªÊ§¡£
-#acks = all ÕâÒâÎ¶×Åleader½«µÈ´ıÍêÕûµÄÍ¬²½¸±±¾¼¯ÒÔÈ·ÈÏ¼ÇÂ¼£¬Õâ±£Ö¤ÁËÖ»ÒªÖÁÉÙÒ»¸öÍ¬²½¸±±¾·şÎñÆ÷ÈÔÈ»´æ»î£¬¼ÇÂ¼¾Í²»»á¶ªÊ§£¬ÕâÊÇ×îÇ¿ÓĞÁ¦µÄ±£Ö¤£¬ÕâÏàµ±ÓÚacks = -1µÄÉèÖÃ¡£
-#¿ÉÒÔÉèÖÃµÄÖµÎª£ºall, -1, 0, 1
+#procedureÒªï¿½ï¿½leaderï¿½Ú¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö®Ç°ï¿½Õµï¿½ï¿½ï¿½È·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ú¿ï¿½ï¿½Æ·ï¿½ï¿½Í¼ï¿½Â¼ï¿½Ú·ï¿½ï¿½ï¿½ËµÄ³Ö¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Öµï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½ï¿½Â£ï¿½
+#acks = 0 ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ã£¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ß½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½ï¿½ï¿½ï¿½Ô·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îºï¿½È·ï¿½Ï£ï¿½ï¿½Ã¼ï¿½Â¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Óµï¿½ï¿½×½ï¿½ï¿½Ö»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½Ñ·ï¿½ï¿½Í¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Â£ï¿½ï¿½Ş·ï¿½ï¿½ï¿½Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Õµï¿½ï¿½ï¿½Â¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ğ§ï¿½ï¿½ï¿½ï¿½Îªï¿½Í»ï¿½ï¿½ï¿½Í¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Öªï¿½ï¿½ï¿½ÎºÎ¹ï¿½ï¿½Ï£ï¿½ï¿½ï¿½ÎªÃ¿ï¿½ï¿½ï¿½ï¿½Â¼ï¿½ï¿½ï¿½Øµï¿½Æ«ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îª-1ï¿½ï¿½
+#acks = 1 ï¿½ï¿½ï¿½ï¿½Î¶ï¿½ï¿½leaderï¿½á½«ï¿½ï¿½Â¼Ğ´ï¿½ï¿½ï¿½ä±¾ï¿½ï¿½ï¿½ï¿½Ö¾ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½ï¿½ï¿½ï¿½Ğ¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È«È·ï¿½Ï¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó¦ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Â£ï¿½ï¿½ï¿½ï¿½leaderï¿½ï¿½È·ï¿½Ï¼ï¿½Â¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê§ï¿½Ü£ï¿½ï¿½ï¿½ï¿½Ú½ï¿½ï¿½ï¿½ï¿½İ¸ï¿½ï¿½Æµï¿½ï¿½ï¿½ï¿½ĞµÄ¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö®Ç°ï¿½ï¿½ï¿½ï¿½ï¿½Â¼ï¿½ï¿½ï¿½á¶ªÊ§ï¿½ï¿½
+#acks = all ï¿½ï¿½ï¿½ï¿½Î¶ï¿½ï¿½leaderï¿½ï¿½ï¿½È´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Í¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È·ï¿½Ï¼ï¿½Â¼ï¿½ï¿½ï¿½â±£Ö¤ï¿½ï¿½Ö»Òªï¿½ï¿½ï¿½ï¿½Ò»ï¿½ï¿½Í¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È»ï¿½ï¿½î£¬ï¿½ï¿½Â¼ï¿½Í²ï¿½ï¿½á¶ªÊ§ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ç¿ï¿½ï¿½ï¿½ï¿½ï¿½Ä±ï¿½Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½àµ±ï¿½ï¿½acks = -1ï¿½ï¿½ï¿½ï¿½ï¿½Ã¡ï¿½
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ãµï¿½ÖµÎªï¿½ï¿½all, -1, 0, 1
 spring.kafka.producer.acks=1
 
-# Ö¸¶¨ÏûÏ¢keyºÍÏûÏ¢ÌåµÄ±à½âÂë·½Ê½
+# Ö¸ï¿½ï¿½ï¿½ï¿½Ï¢keyï¿½ï¿½ï¿½ï¿½Ï¢ï¿½ï¿½Ä±ï¿½ï¿½ï¿½ë·½Ê½
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 #=============== consumer  =======================
-# Ö¸¶¨Ä¬ÈÏÏû·ÑÕßgroup id --> ÓÉÓÚÔÚkafkaÖĞ£¬Í¬Ò»×éÖĞµÄconsumer²»»á¶ÁÈ¡µ½Í¬Ò»¸öÏûÏ¢£¬ÒÀ¿¿groud.idÉèÖÃ×éÃû
-spring.kafka.consumer.group-id=eblogGroup
-# smallestºÍlargest²ÅÓĞĞ§£¬Èç¹ûsmallestÖØĞÂ0¿ªÊ¼¶ÁÈ¡£¬Èç¹ûÊÇlargest´ÓlogfileµÄoffset¶ÁÈ¡¡£Ò»°ãÇé¿öÏÂÎÒÃÇ¶¼ÊÇÉèÖÃsmallest
+# Ö¸ï¿½ï¿½Ä¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½group id --> ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½kafkaï¿½Ğ£ï¿½Í¬Ò»ï¿½ï¿½ï¿½Ğµï¿½consumerï¿½ï¿½ï¿½ï¿½ï¿½È¡ï¿½ï¿½Í¬Ò»ï¿½ï¿½ï¿½ï¿½Ï¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½groud.idï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+spring.kafka.consumer.group-id=GAASDGSAGROUP
+# smallestï¿½ï¿½largestï¿½ï¿½ï¿½ï¿½Ğ§ï¿½ï¿½ï¿½ï¿½ï¿½smallestï¿½ï¿½ï¿½ï¿½0ï¿½ï¿½Ê¼ï¿½ï¿½È¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½largestï¿½ï¿½logfileï¿½ï¿½offsetï¿½ï¿½È¡ï¿½ï¿½Ò»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ç¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½smallest
 spring.kafka.consumer.auto-offset-reset=latest
-# enable.auto.commit:true --> ÉèÖÃ×Ô¶¯Ìá½»offset
+# enable.auto.commit:true --> ï¿½ï¿½ï¿½ï¿½ï¿½Ô¶ï¿½ï¿½á½»offset
 spring.kafka.consumer.enable-auto-commit=true
-#Èç¹û'enable.auto.commit'Îªtrue£¬ÔòÏû·ÑÕßÆ«ÒÆ×Ô¶¯Ìá½»¸øKafkaµÄÆµÂÊ£¨ÒÔºÁÃëÎªµ¥Î»£©£¬Ä¬ÈÏÖµÎª5000¡£
+#ï¿½ï¿½ï¿½'enable.auto.commit'Îªtrueï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ«ï¿½ï¿½ï¿½Ô¶ï¿½ï¿½á½»ï¿½ï¿½Kafkaï¿½ï¿½Æµï¿½Ê£ï¿½ï¿½Ôºï¿½ï¿½ï¿½Îªï¿½ï¿½Î»ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½ÖµÎª5000ï¿½ï¿½
 spring.kafka.consumer.auto-commit-interval=100
 
-# Ö¸¶¨ÏûÏ¢keyºÍÏûÏ¢ÌåµÄ±à½âÂë·½Ê½
+# Ö¸ï¿½ï¿½ï¿½ï¿½Ï¢keyï¿½ï¿½ï¿½ï¿½Ï¢ï¿½ï¿½Ä±ï¿½ï¿½ï¿½ë·½Ê½
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
